examples/kubernetes/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: pape-rs
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pape-rs
    spec:
      containers:
        - name: pape-rs
          image: store2be/pape-rs
          ports:
            - containerPort: 8080
